# cppwinrt-cmake

./: CMakeLists.txt  README.md
.github/workflows/: build.yaml
examples/: CMakeLists.txt  syndication.cpp
modules/: CMakeLists.txt
modules-examples/: CMakeLists.txt  httpclient.ixx  simple.ixx  syndication.ixx
